configs/samples/rhaiis-deploy/service-granite.yaml
apiVersion: v1
kind: Service
metadata:
  name: granite-rhaiis
  namespace: rhaii-namespace
spec:
  selector:
    app: granite-rhaiis
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
