configs/samples/rhaiis-deploy/route-granite.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: granite
  namespace: rhaiis-namespace
spec:
  to:
    kind: Service
    name: granite
  port:
    targetPort: 80
  tls:
    termination: edge
